[package]
name = "stake-house-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-account-decoder = "2"
solana-client = "2"
solana-sdk = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
