[package]
name = "stake-house-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = "0.8"
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
tokio.workspace = true
