[package]
name = "stake-house-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio.workspace = true
